--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
         <div id="title-box">
 
           <!-- Level 4 'PHARRELL WILLIAMS' Header -->
-          PHARRELL WILLIAMS
+          <h4></h4>PHARRELL WILLIAMS
 
 
 
-| FROM DESPICABLE ME 2 |
+
 
           <!-- Level 2 'HAPPY' Header -->
 HAPPY
           <!-- Level 4 '| FROM DESPICABLE ME...' Header -->
-
+| FROM DESPICABLE ME 2 |
         </div>
       </div>
 
