Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
         <div id="title-box">
 
           <!-- Level 4 'PHARRELL WILLIAMS' Header -->
-          <p></p><h4>PHARRELL WILLIAMS</h4>
+          <p><h4>PHARRELL WILLIAMS</h4></p>
 
 
 
 
 
           <!-- Level 2 'HAPPY' Header -->
-HAPPY
+<p></p>HAPPY
           <!-- Level 4 '| FROM DESPICABLE ME...' Header -->
 | FROM DESPICABLE ME 2 |
         </div>
