--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 
           <!-- Level 2 'HAPPY' Header -->
-<p></p>HAPPY
+<p><h2></h2>HAPPY</p>
           <!-- Level 4 '| FROM DESPICABLE ME...' Header -->
 | FROM DESPICABLE ME 2 |
         </div>
