--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <!-- Level 2 'HAPPY' Header -->
 <p><h2>HAPPY</h2></p>
           <!-- Level 4 '| FROM DESPICABLE ME...' Header -->
-<p><h4>FROM DESPICABLE ME 2 |</h4></p>
+<p><h4>| FROM DESPICABLE ME 2 |</h4></p>
         </div>
       </div>
 
