--- a/index.html
+++ b/index.html
@@ -11,12 +11,7 @@
         <div id="title-box">
 
           <!-- Level 4 'PHARRELL WILLIAMS' Header -->
-          <p><h4>PHARRELL WILLIAMS</h4></p>
-
-
-
-
-
+          <h4>PHARRELL WILLIAMS</h4>
           <!-- Level 2 'HAPPY' Header -->
 <p><h2>HAPPY</h2></p>
           <!-- Level 4 '| FROM DESPICABLE ME...' Header -->
