--- a/index.html
+++ b/index.html
@@ -21,21 +21,8 @@
 
       <div id="back" class="album">
 
-
-
-
-
-
-
-
-
-
-
-
-
-
         <!-- Level 3 '| FROM DESPICABLE ME...' Header -->
-| &nbsp;&nbsp; FROM DESPICABLE ME 2 &nbsp;&nbsp; |
+<h3></h3>| &nbsp;&nbsp; FROM DESPICABLE ME 2 &nbsp;&nbsp; |
         <!-- Level 1 'HAPPY' Header -->
 HAPPY
         <!-- Level 3 'WRITTEN BY...' Header -->
@@ -51,7 +38,6 @@ COLUMBIARECORDS.COM
         <br>
 
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/sony-logo.png] -->
-
 [sony-logo.png]
       </div>
     </div>
