--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
       <div id="back" class="album">
 
         <!-- Level 3 '| FROM DESPICABLE ME...' Header -->
-<h3></h3>| &nbsp;&nbsp; FROM DESPICABLE ME 2 &nbsp;&nbsp; |
+<h3>| &nbsp;&nbsp; FROM DESPICABLE ME 2 &nbsp;&nbsp; |</h3>
         <!-- Level 1 'HAPPY' Header -->
-HAPPY
+<h1></h1>HAPPY
         <!-- Level 3 'WRITTEN BY...' Header -->
 WRITTEN BY PHARRELL WILLIAMS
         <!-- pararaph text 'PUBLISHED BY...' -->
