--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/columbia-logo.png] -->
 <img src="https://s3.amazonaws.com/learn-verified/columbia-logo.png" alt= "Columbia Logo">
         <!-- span text 'COLUMBIARECORDS.COM' -->
-COLUMBIARECORDS.COM
+<span></span>COLUMBIARECORDS.COM
         <br>
 
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/sony-logo.png] -->
